styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
	box-sizing: border-box;
	text-rendering: optimizeLegibility;
	scroll-behavior: smooth;
	font-family: var(--font-def) !important;
}

html::-webkit-scrollbar {
	display: none;
}
html {
	-ms-overflow-style: none;
	scrollbar-width: none;
}

main,
body {
	background: #000 linear-gradient(0deg, rgba(216, 236, 248, 0.05), rgba(152, 192, 239, 0.05)) !important;
}

main,
body {
	overflow-x: hidden !important;
}

@property --p {
	syntax: "<percentage>";
	inherits: false;
	initial-value: 0%;
}

.ttext {
	color: #d8ecf8;
	text-shadow: 0 2px 16px rgba(174, 207, 242, 0.24);
	background: linear-gradient(0deg, #d8ecf8 0, #98c0ef 100%);
	background-clip: text;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

/* btns */
.sm-btn,
.sm-btn::before {
	width: 3rem !important;
	height: 3rem !important;
}
.nav-btn,
.sm-btn {
	position: relative;
	margin: 0 auto;
	width: 120px;
	height: 40px;
	cursor: pointer;
	border-radius: 20em;
	border: none;
	transition:
		background 0.5s,
		transform 0.5s;

	border: 1px solid #c2ccff33;
	opacity: 1;
	padding-top: 0.3em;

	background: #121521;
	color: #9dc3f7;
	white-space: nowrap;
	@apply flex justify-center items-center;
}
.nav-btn::before,
.sm-btn::before {
	content: "";
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	border-radius: 20em;
	width: 120px;
	height: 40px;
	background: #c2ccff91 radial-gradient(farthest-side at 50% 100%, #c2ccff, transparent);
	opacity: 0.1;
	transition: all 0.4s ease-in-out;
}
.nav-btn:hover::before,
.sm-btn:hover::before {
	background: #c2ccff1e radial-gradient(farthest-side at 50% 100%, #c2ccff, transparent);
	opacity: 0.3;
}
.nav-btn .glow {
	width: 120px;
	height: 40px;
	--border-width: 1px;
	--loop-cycle: 24s;
	position: absolute;
	inset: calc(var(--border-width) * -1);
	border-radius: 50px;
	border: var(--border-width) solid transparent;
	-webkit-mask: linear-gradient(transparent, transparent), linear-gradient(white, white);
	mask: linear-gradient(transparent, transparent), linear-gradient(white, white);
	-webkit-mask-clip: padding-box, border-box;
	mask-clip: padding-box, border-box;
	-webkit-mask-composite: source-in, xor;
	mask-composite: intersect;
	pointer-events: none;
}
.nav-btn:hover .glow {
	--loop-cycle: 2s;
}
.nav-btn .glow::after,
.nav-btn .glow::before {
	content: "";
	height: 100%;
	offset-anchor: 100% 50%;
	background: radial-gradient(circle at 50% 50%, hsla(0, 0%, 100%, 0.75), transparent 50%),
		radial-gradient(circle at 50% 50%, #c2ccff 50%, transparent);
	opacity: 0.4;
	offset-path: rect(0 100% 100% 0 round 33px);
	position: absolute;
	display: inline-block;
	-webkit-animation: loop 4s linear infinite;
	animation: loop var(--loop-cycle) linear infinite;
	aspect-ratio: 1 / 1;
	transition: opacity 1s ease-in-out;
}
.nav-btn .glow::before {
	animation-delay: calc(var(--loop-cycle) / -2);
}
@keyframes loop {
	100% {
		offset-distance: 100%;
	}
}
.nav-btn-content {
	background: linear-gradient(0deg, #d8ecf8, #98c0ef);
	background-clip: text;
	-webkit-text-fill-color: transparent;
	font-size: 1.2em;
	line-height: 142%;
}
.nav-btn:hover .glow::after,
.nav-btn:hover .glow::before {
	opacity: 0.6;
}
@keyframes btn-rot {
	0% {
		rotate: 0deg;
	}
	100% {
		rotate: 360deg;
	}
}

/*  */
p,
a,
span,
strong {
	@apply tracking-wide leading-relaxed;
}

